--- a/src/TransactionsGui/_Imports.razor
+++ b/src/TransactionsGui/_Imports.razor
@@ -1,4 +1,7 @@
-﻿@using System.Net.Http
+﻿@using System
+@using System.Reactive.Linq
+@using System.Linq
+@using System.Net.Http
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -6,5 +9,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using StrawberryShake
 @using TransactionsGui
 @using TransactionsGui.Shared
+@using TransactionsGraphQLClient
