--- a/src/TransactionsGui/Pages/Index.razor
+++ b/src/TransactionsGui/Pages/Index.razor
@@ -28,7 +28,7 @@ Welcome to your new app.
     //        .ToArray();
     //}
 
-    // Subscribe for push
+    // Subscribe for push -> does not work. Issue: Fetches only when menu is (re)initialized
     private IDisposable storeSession;
 
     protected override void OnInitialized()
